[package]
name = "media-server"
version = "0.1.0"
authors = ["Ryan P. Brewster <RyanPBrewster@gmail.com>"]
edition = "2018"

[dependencies]
blurhash = "0.1"
bytes = "0.5"
dirs = "2.0.2"
env_logger = "0.7"
image = "0.23"
log = "0.4"
rand = "0.7"
reqwest = "0.10"
structopt = "0.3"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
yup-oauth2 = "4.1.0"
