[package]
name = "media-server"
version = "0.1.0"
authors = ["Ryan P. Brewster <RyanPBrewster@gmail.com>"]
edition = "2018"

[dependencies]
blurhash = "0.1"
bytes = "1"
dirs = "3"
env_logger = "0.8"
image = "0.23"
log = "0.4"
rand = "0.7"
reqwest = "0.11"
serde = "1"
serde_json = "1"
structopt = "0.3"
tokio = { version = "1.3", features = ["full"] }
warp = "0.3"
yup-oauth2 = "5.1"
